--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
         "symfony/filesystem": "^4.0",
         "nesbot/carbon": "^1.26.0",
         "guzzlehttp/guzzle": "^6.0",
-        "ext-bcmath": "*"
+        "ext-bcmath": "*",
+        "ext-fileinfo": "*"
     },
     "require-dev": {
         "phpunit/phpunit": ">=7.0",
