Added: Add SnowFlake algo, generate 64 bit identifier, use snowflakes from Twitter.

--- a/composer.json
+++ b/composer.json
@@ -18,11 +18,12 @@
     ],
     "require": {
         "php": "~7.1",
-        "symfony/filesystem": "^4.0",
-        "nesbot/carbon": "^1.26.0",
-        "guzzlehttp/guzzle": "^6.0",
         "ext-bcmath": "*",
-        "ext-fileinfo": "*"
+        "ext-fileinfo": "*",
+        "guzzlehttp/guzzle": "^6.0",
+        "nesbot/carbon": "^1.26.0",
+        "symfony/filesystem": "^4.0",
+        "yiranzai/snowflake": "~0.1"
     },
     "require-dev": {
         "phpunit/phpunit": ">=7.0",
