--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
         "guzzlehttp/guzzle": "^6.0",
         "nesbot/carbon": "^1.26.0",
         "symfony/filesystem": "^4.0",
-        "yiranzai/snowflake": "~0.1",
+        "yiranzai/snowflake": "~0.1"
     },
     "require-dev": {
         "phpunit/phpunit": ">=7.0",
